--- a/UI/login.html
+++ b/UI/login.html
@@ -1,88 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<html lang="fr">
 
 <head>
-    <title>TEAM-REDSHIFT LOGIN PAGE</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="icon" type="image/png" href="images/icons/favicon.ico" />
-
-    <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-
-    <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-
-    <link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
-
-    <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-
-    <link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
-
-    <link rel="stylesheet" type="text/css" href="vendor/animsition/css/animsition.min.css">
-
-    <link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-
-    <link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
-    <!-- My CSS Link -->
-    <link rel="stylesheet" type="text/css" href="css/util.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <title>Login</title>
+    <script type="text/javascript" src="js/main.js"></script>
 </head>
 
 <body>
-
-    <div class="limiter">
-        <div class="container-login100" style="background-image: url('images/bg-01.jpg');">
-            <div class="wrap-login100">
-                <form class="login100-form validate-form">
-                    <span class="login100-form-logo">
-                        <i class="zmdi zmdi-landscape"></i>
-                    </span>
-
-                    <span class="login100-form-title p-b-34 p-t-27">
-                        Log in
-                    </span>
-
-                    <div class="wrap-input100 validate-input" data-validate="Enter username">
-                        <input class="input100" type="text" name="username" placeholder="Username">
-                        <span class="focus-input100" data-placeholder="&#xf207;"></span>
-                    </div>
-
-                    <div class="wrap-input100 validate-input" data-validate="Enter password">
-                        <input class="input100" type="password" name="pass" placeholder="Password">
-                        <span class="focus-input100" data-placeholder="&#xf191;"></span>
-                    </div>
-
-                    <div class="contact100-form-checkbox">
-                        <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-                        <label class="label-checkbox100" for="ckb1">
-                            Remember me
-                        </label>
-                    </div>
-
-                    <div class="container-login100-form-btn">
-                        <button class="login100-form-btn">
-                            Login
-                        </button>
-                    </div>
-
-                    <div class="text-center p-t-90">
-                        <a class="txt1" href="#">
-                            Forgot Password?
-                        </a>
-                    </div>
-                </form>
+    <h1 class="login-header">
+        Login to Hotels.NG Platform
+    </h1>
+    <div id="login-main" class="container">
+        <form name="login" method="POST" role="form" onsubmit="loginUser(); return false;">
+        <p class="correct login-info">Incorrect Username/password</p>
+            <div class="auth-form-header">
+                Sign In
             </div>
-        </div>
+            <div class="auth-form-body">
+                <label for="email-input">Email:</label>
+                <input id="email-input" type="text" name="email" autofocus="autofocus" />
+                <label for="password-input">Password:</label>
+                <input type="password" name="password" id="password-input" tabindex="2" />
+                <input type="submit" id="login-submit" value="Sign In" tabindex="3" />
+            </div>
+        </form>
     </div>
-
-
-    <div id="dropDownSelect1"></div>
-    <!-- MY JavaScript link -->
-
-    <script type="text/javascript" src="js/main.js"></script>
-
-
 </body>
+
+</html>
