--- a/UI/welcome.html
+++ b/UI/welcome.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script type="text/javascript" src="js/main.js"></script>
     <title>Document</title>
-</head>
-<body>
-   <h1> Welcome to HotelNG portal!</h1> 
-</body>
+  </head>
+  <body>
+    <h1>Welcome to HotelNG portal!</h1>
+    <script>
+        startMainScreen();
+    </script>
+  </body>
 </html>
