--- a/public/welcome.html
+++ b/public/welcome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/welcome.js"></script>
     <title>Document</title>
   </head>
   <body>
