--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Welcome to HNG Portal</title>
 </head>
 <body>
    <button onclick="window.location = 'https://radiant-crag-38983.herokuapp.com/login'; ">
        Login
    </button> 
-   <button>
+   <button onclick="window.location = 'https://radiant-crag-38983.herokuapp.com/signup'; ">
        Sign Up
    </button>
 </body>
