--- a/public/signup.html
+++ b/public/signup.html
@@ -12,7 +12,7 @@
     <h1 class="login-header">
       Sign Up for HNG Portal
     </h1>
-    <p class="signup-message"></p>
+    <p class="login-info"></p>
     <div id="signup-main" class="container">
       <form name="signup" method="POST" role="form" onsubmit="signupUser(); return false;">
         <label for="name-input">Full Name:</label>
@@ -44,7 +44,7 @@
           name="password2"
           autofocus="autofocus"
         />
-        <input type="submit" id="login-submit" value="Sign In" tabindex="3" />
+        <input type="submit" id="login-submit" value="Sign Up" tabindex="3" />
       </form>
     </div>
   </body>
